operator/controller/src/main/resources/k8s/default/app.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: { }
spec:
  replicas: 1
  selector:
    matchLabels:
      { }
  template:
    metadata: { }
    spec:
      containers:
        - name: apicurio-registry-app
          image: quay.io/apicurio/apicurio-registry:latest-snapshot
          env: [ ]
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 8080
              scheme: HTTP
          livenessProbe:
            httpGet:
              path: /health/live
              port: 8080
              scheme: HTTP
          resources:
            requests:
              cpu: 500m
              memory: 512Mi
            limits:
              cpu: '1'
              memory: 1Gi
