operator/controller/src/main/resources/k8s/default/ui.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: { }
spec:
  replicas: 1
  selector:
    matchLabels:
      { }
  template:
    metadata: { }
    spec:
      # WARNING: Make sure to update the io.apicurio.registry.operator.utils.PodTemplateSpecUtils.merge method
      # when making significant changes here:
      containers:
        - name: apicurio-registry-ui
          image: quay.io/apicurio/apicurio-registry-ui:latest-snapshot
          env: [ ]
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /config.js
              port: 8080
              scheme: HTTP
          livenessProbe:
            httpGet:
              path: /config.js
              port: 8080
              scheme: HTTP
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 200m
              memory: 512Mi
