operator/controller/src/main/resources/k8s/default/app.service.yaml
apiVersion: v1
kind: Service
metadata: { }
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
    - name: management
      port: 9000
      protocol: TCP
      targetPort: management
  selector: { }
