operator/controller/src/main/resources/k8s/default/console-plugin.service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: placeholder
spec:
  ports:
    - name: https
      port: 9443
      protocol: TCP
      targetPort: https
  selector: { }
