operator/controller/src/main/resources/k8s/default/ui.service.yaml
apiVersion: v1
kind: Service
metadata: { }
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
  selector: { }
