operator/controller/src/main/resources/k8s/default/app.networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata: { }
spec:
  podSelector:
    matchLabels: { }
  policyTypes:
    - Ingress
  ingress: [ ]
