operator/controller/src/main/resources/k8s/default/ui.networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata: { }
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: apicurio-registry
      app.kubernetes.io/component: ui
  policyTypes:
    - Ingress
